--- a/index.html
+++ b/index.html
@@ -23,12 +23,8 @@
 
       <div class="volum">
         <div class="volume">
-          <i
-            class="fa fa-volume-off"
-            style="color: #0084ff"
-            aria-hidden="true"
-          ></i
-          ><input type="range" id="range" />
+          <i class="fa-solid fa-volume-xmark" style="color: #0084ff"></i>
+          <input type="range" id="range" />
         </div>
       </div>
 
@@ -138,8 +134,22 @@
             ><i class="fa fa-phone" aria-hidden="true"></i
           ></span>
           <span class="num" id="eraseBtn"
-            ><i class="fa fa-backward" aria-hidden="true"></i
-          ></span>
+            ><i class="fa-solid fa-delete-left"></i></span>
+        </div>
+      </div>
+      <div id="dailingScreen">
+        <div id="calledData">
+          <span id="calledName">Jane Doe</span>
+          <span id="calledNumber"></span>
+        </div>
+        <div class="callActions">
+          <i class="fa-solid fa-microphone-lines-slash"></i>
+          <i class="fa-solid fa-pause"></i>
+          <i class="fa-solid fa-record-vinyl"></i>
+          <i class="fa-solid fa-plus"></i>
+          <i class="fa-solid fa-volume-high"></i>
+          <i class="fa-solid fa-grip"></i>
+          <i class="endCall fa-solid fa-phone"></i>
         </div>
       </div>
       <div id="photosScreen">
@@ -148,30 +158,33 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <div class="images">
-          <img src="https://picsum.photos/id/11/120" alt="" />
-          <img src="https://picsum.photos/id/12/120" alt="" />
-          <img src="https://picsum.photos/id/14/120" alt="" />
-          <img src="https://picsum.photos/id/13/120" alt="" />
-          <img src="https://picsum.photos/id/15/120" alt="" />
-          <img src="https://picsum.photos/id/16/120" alt="" />
-          <img src="https://picsum.photos/id/17/120" alt="" />
-          <img src="https://picsum.photos/id/18/120" alt="" />
-          <img src="https://picsum.photos/id/19/120" alt="" />
-          <img src="https://picsum.photos/id/20/120" alt="" />
-          <img src="https://picsum.photos/id/21/120" alt="" />
-          <img src="https://picsum.photos/id/22/120" alt="" />
-          <img src="https://picsum.photos/id/23/120" alt="" />
-          <img src="https://picsum.photos/id/24/120" alt="" />
-          <img src="https://picsum.photos/id/25/120" alt="" />
-          <img src="https://picsum.photos/id/26/120" alt="" />
-          <img src="https://picsum.photos/id/27/120" alt="" />
-          <img src="https://picsum.photos/id/28/120" alt="" />
-          <img src="https://picsum.photos/id/29/120" alt="" />
-          <img src="https://picsum.photos/id/30/120" alt="" />
-          <img src="https://picsum.photos/id/31/120" alt="" />
-          <img src="https://picsum.photos/id/32/120" alt="" />
-          <img src="https://picsum.photos/id/33/120" alt="" />
-          <img src="https://picsum.photos/id/34/120" alt="" />
+          <img src="https://picsum.photos/id/11/120" alt="image" />
+          <img src="https://picsum.photos/id/12/120" alt="image" />
+          <img src="https://picsum.photos/id/14/120" alt="image" />
+          <img src="https://picsum.photos/id/13/120" alt="image" />
+          <img src="https://picsum.photos/id/15/120" alt="image" />
+          <img src="https://picsum.photos/id/16/120" alt="image" />
+          <img src="https://picsum.photos/id/17/120" alt="image" />
+          <img src="https://picsum.photos/id/18/120" alt="image" />
+          <img src="https://picsum.photos/id/19/120" alt="image" />
+          <img src="https://picsum.photos/id/20/120" alt="image" />
+          <img src="https://picsum.photos/id/21/120" alt="image" />
+          <img src="https://picsum.photos/id/22/120" alt="image" />
+          <img src="https://picsum.photos/id/23/120" alt="image" />
+          <img src="https://picsum.photos/id/24/120" alt="image" />
+          <img src="https://picsum.photos/id/25/120" alt="image" />
+          <img src="https://picsum.photos/id/26/120" alt="image" />
+          <img src="https://picsum.photos/id/27/120" alt="image" />
+          <img src="https://picsum.photos/id/28/120" alt="image" />
+          <img src="https://picsum.photos/id/29/120" alt="image" />
+          <img src="https://picsum.photos/id/30/120" alt="image" />
+          <img src="https://picsum.photos/id/31/120" alt="image" />
+          <img src="https://picsum.photos/id/32/120" alt="image" />
+          <img src="https://picsum.photos/id/33/120" alt="image" />
+          <img src="https://picsum.photos/id/34/120" alt="image" />
+          <img src="https://picsum.photos/id/35/120" alt="image" />
+          <img src="https://picsum.photos/id/36/120" alt="image" />
+          <img src="https://picsum.photos/id/37/120" alt="image" />
         </div>
       </div>
       <div id="musicScreen">
@@ -328,6 +341,20 @@
               <p>😂😂😂😂</p>
             </li>
           </ul>
+        </div>
+      </div>
+      <div id="cameraScreen">
+        <div class="camActions">
+          <i class="fa-solid fa-camera"></i>
+          <i class="fa-solid fa-video"></i>
+          <i id="camFlash" class="fa-solid fa-bolt"></i>
+          <i id="flipCamera" class="fa-solid fa-camera-rotate"></i>
+        </div>
+        <div class="cam">
+          <video src=""></video>
+        </div>
+        <div class="camShot">
+          <i class="fa-solid fa-record-vinyl"></i>
         </div>
       </div>
     </div>
