--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
               id="sms"
               src="./images/app.png"
               alt="app"
-              width="80"
-              height="75"
+              width="75"
+              height="85"
+              style="padding-top: 7px;"
             />
             <img id="call" src="./images/video.png" alt="app" width="80" />
             <img
@@ -106,7 +107,8 @@
               src="./images/camera.png"
               alt="app"
               width="70"
-              height="70"
+              height="77"
+              style="padding-top: 7px;"
             />
           </span>
         </div>
@@ -139,7 +141,7 @@
       </div>
       <div id="dailingScreen">
         <div id="calledData">
-          <span id="calledName">Jane Doe</span>
+          <span id="calledName"> </span>
           <span id="calledNumber"></span>
         </div>
         <div class="callActions">
@@ -199,60 +201,61 @@
               muhabbatim
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Eminem</span> - Sing for the moment
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">xxxtentacion</span> - Changes
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Dharia</span> - Sugar & Brownies
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Kaleo</span> - Way Down We Go
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Shokir & Konsta</span> - Chumoli
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Enrasta</span> - Djavanna
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Marroon 5</span> - Animals
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Dua Lipa</span> - Bang Bang
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Imagine Dragons</span> - Thunder
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Boney M</span> - Rasputin
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Coolio feat. I.V.</span> - Gangsta's Paradise
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">BoyWithUke</span> - Toxic Friends
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">Duncan Laurance</span> - Arcade
             </li>
             <li>
-              <span style="font-weight: 700">Sherali Jo'rayev</span> - Birinchi
-              muhabbatim
+              <span style="font-weight: 700">NF</span> - The Search
+            </li>
+            <li>
+              <span style="font-weight: 700">Home Free</span> - Sea Shanty Medley
+            </li>
+            <li>
+              <span style="font-weight: 700">Aurora</span> - Runaway
+            </li>
+            <li>
+              <span style="font-weight: 700">xxxtentacion</span> - Save Me
+            </li>
+            <li>
+              <span style="font-weight: 700">Tom Odell</span> - Another Love
+            </li>
+            <li>
+              <span style="font-weight: 700">Glass Animals & High Cloud</span> - Heat Waves
             </li>
           </ol>
         </div>
@@ -355,6 +358,25 @@
         </div>
         <div class="camShot">
           <i class="fa-solid fa-record-vinyl"></i>
+        </div>
+      </div>
+      <div id="weatherScreen">
+        <div class="weatherTop">
+          <h3>Weather</h3>
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
+        <div class="celcius">
+          <i class="fa fa-sun" style="color: gold;"></i>
+          <p>25&deg;C</p>
+        </div>
+        <div class="weatherData">
+          <ul>
+            <li><span class="weatherInfromation" style="color: orange;"><i class="fa fa-thermometer-4" aria-hidden="true"></i> Hottest</span><span class="weatherRate">28&deg;C</span></li>
+            <li><span class="weatherInfromation" style="color: #0084ff;"><i class="fa fa-thermometer-0" aria-hidden="true"></i> Coldest</span><span class="weatherRate">15&deg;C</span></li>
+            <li><span class="weatherInfromation" style="color: grey;"><i class="fa fa-wind" aria-hidden="true"></i> Wind</span><span class="weatherRate">2m/s</span></li>
+            <li><span class="weatherInfromation"><i class="fa fa-running" aria-hidden="true"></i> Running</span><span class="weatherRate">Excellent</span></li>
+            <li><span class="weatherInfromation" style="color: skyblue;"><i class="fa fa-cloud" aria-hidden="true"></i> Sky</span><span class="weatherRate">Partly cloudy</span></li>
+          </ul>
         </div>
       </div>
     </div>
